Fix input bug on iOS due to default stylings

--- a/loginscreen/simple-login/client/src/App.css
+++ b/loginscreen/simple-login/client/src/App.css
@@ -4,3 +4,11 @@
     width: 100vw;
     min-height: 600px  ;
 }
+
+input, input:before, input:after {
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
+   } 
